clang/test/BSC/Negative/Ownership/RuleCheck/cast_between_owned_and_borrow/cast_between_owned_and_borrow.cbs
// RUN: %clang_cc1 -verify %s

void cast_owned_to_borrow(int *owned p) {
    int *_Borrow q = (int *_Borrow) p; // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'int *_Borrow'}}
}

int *owned cast_borrow_to_owned(int *_Borrow p) {
    int *owned q = (int *owned) p; // expected-error {{incompatible owned types, cannot cast 'int *_Borrow' to 'int *owned'}}
    return q;
}